fix alignment

--- a/css/style.scss
+++ b/css/style.scss
@@ -91,6 +91,9 @@ html {
     justify-content: center;
     height:70vh;
     margin:1.5em;
+    p {
+        text-align: right;
+    }
     h1 {
         font-size:3.5em;
     }
